[package]
name = "http-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.0", features = ["full"] }
hyper = "0.14"
tower = "0.4"
serde = { version = "1.0.217", features = ["derive", "alloc", "rc"] }
tower-http = { version = "0.6.2", features = ["cors"] }
